<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/background"
    android:paddingLeft="50dip"
    android:paddingRight="50dip"
    android:paddingTop="0dip"
    android:paddingBottom="50dip"
    android:keepScreenOn="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    >
    
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >
       <!-- 游戏标题 -->
       <TextView
         android:text="@string/app_name"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:textColor="#50ff00ff"
         android:layout_marginBottom="30dip"
         android:textSize="30sp" />
         
      <!-- START NEW GAME -->      
      <FrameLayout 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         <ImageButton android:id="@+id/start_id"
            android:background="@null"
            android:src="@drawable/button_selector"
            android:onClick="onClickButton"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"            
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:textSize="16sp"
            android:textColor="#802C90"
            android:text="@string/start" >
        </TextView>
      </FrameLayout>
       
       <!-- CONTINUE -->      
      <FrameLayout 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         <ImageButton android:id="@+id/continue_id"
            android:background="@null"
            android:src="@drawable/button_selector"
            android:onClick="onClickButton"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"            
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:textSize="16sp"
            android:textColor="#802C90"
            android:text="@string/continued" >
        </TextView>
      </FrameLayout>
      
      <!-- RANK LIST -->      
      <FrameLayout 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         <ImageButton android:id="@+id/rank_id"
            android:background="@null"
            android:src="@drawable/button_selector"
            android:onClick="onClickButton"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"            
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:textSize="16sp"
            android:textColor="#802C90"
            android:text="@string/rank" >
        </TextView>
      </FrameLayout>
        
      <!-- ABOUT -->      
      <FrameLayout 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         <ImageButton android:id="@+id/about_id"
            android:background="@null"
            android:src="@drawable/button_selector"
            android:onClick="onClickButton"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"            
            android:layout_gravity="center"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:textSize="16sp"
            android:textColor="#802C90"
            android:text="@string/about" >
        </TextView>
      </FrameLayout>

   </LinearLayout>   
</LinearLayout>
